fix JWT try catch errors
yêu cầu th Khả fix Lazy ngay